Renamed and finished basic parsing support.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "qustc"
+name = "quantumc"
 version = "0.1.0"
 authors = ["aticu <15schnic@gmail.com>"]
 
 [[bin]]
-name = "qustc"
+name = "quantumc"
 doc = false
 
 [dependencies]
